# pulsar-client-python

./: .gitignore  CMakeLists.txt
.github/workflows/: ci-build-release-wheels.yaml
build-support/: install-cpp-client.sh
pkg/: build-wheel-inside-docker.sh  test-wheel.sh
pkg/mac/: build-dependencies.sh  build-mac-wheels.sh  build-pulsar-cpp.sh
pkg/manylinux2014/: Dockerfile
pkg/manylinux_musl/: Dockerfile
